--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <header class="header">
       <div class="container page-header-container">
         <nav class="header-nav">
-          <a class="logo" href="/">Web<span class="logo-part studio-li">Studio</span></a>
+          <a class="logo" href="/">Web<span class="logo-part ">Studio</span></a>
           <ul class="navigation">
-            <li ><a class="nav-link current" href="./index.html">Studio</a></li>
+            <li ><a class="nav-link current studio-li" href="./index.html">Studio</a></li>
             <li ><a class="nav-link" href="">Portfolio</a></li>
             <li ><a class="nav-link" href="">Contacts</a></li>
           </ul>
@@ -645,7 +645,7 @@
 
     </div>
   </div>
-
+<!-- mobile menu -->
   <div class="mobile-menu ">
     <div class="container mobile-menu-container">
       <button class="close-btn">
@@ -655,15 +655,16 @@
       </button>
       <div class="mobile-links">
         <ul class="header-list-mobile">
-          <li class="header-li"><a class="nav-link-mobile studio-li"  href="./index.html">Studio</a></li>
+          <li class="header-li"><a class="nav-link-mobile studio-li-mobile"  href="./index.html">Studio</a></li>
           <li class="header-li"><a class="nav-link-mobile"  href="">Portfolio</a></li>
           <li class="header-li"><a class="nav-link-mobile"  href="">Contacts</a></li>
         </ul>
       </div>
       <address class="address-mobile">
         <ul class="address-list-mobile">
+         
+          <li><a class="address-link phone-number" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
       <div class="social-media-container">
