--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </svg>
         </button>
         <address class="address">
-          <ul class="adress-ul">
+          <ul class="address-ul">
             <li >
               <a class="address-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
